--- a/module_goods/src/main/AndroidManifest.xml
+++ b/module_goods/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.lcworld.module_goods">
 
     <application>
-        <activity android:name="com.lcworld.module_goods.activity.ProductDetailAct" />
+        <activity android:name="com.lcworld.module_goods.activity.ProductDetailAct"
+                  android:theme="@style/MainTheme.TranslucentTheme"/>
     </application>
 
 </manifest>
