--- a/module_exchange/build.gradle
+++ b/module_exchange/build.gradle
@@ -17,7 +17,10 @@ dependencies {
     //组件依赖基础库
     api project(':library_base')
     //组件中依赖阿里路由编译框架
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
+    implementation 'com.alibaba:arouter-api:1.4.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
     //单组件依赖的第三方库，这里不能用implementation，否则宿主项目会因为databinding运行时不能找到第三方类报编译错误
 }
