--- a/config.gradle
+++ b/config.gradle
@@ -86,7 +86,10 @@ ext {
             "badgeview"                            : "cn.bingoogolapple:bga-badgeview-api:1.1.8",
             "badgeview-compiler"                   : "cn.bingoogolapple:bga-badgeview-compiler:1.1.8",
             //流式布局  https://github.com/hongyangAndroid/FlowLayout
-            "flowlayout"                           : "com.hyman:flowlayout-lib:1.1.2"
+            "flowlayout"                           : "com.hyman:flowlayout-lib:1.1.2",
+            //微信支付
+            "paysdk_wechat"                         :"com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+"
+
     ]
 
 }
