接口调试： 如意赚生成订单流程修改 商币支付接口完成 普通商品支付接口调试

--- a/module_order/src/main/alone/AndroidManifest.xml
+++ b/module_order/src/main/alone/AndroidManifest.xml
@@ -28,5 +28,10 @@
         <activity android:name="com.lcworld.module_order.activity.PaymentDiamondAct"/>
         <activity android:name="com.lcworld.module_order.activity.OrderReviewAct"/>
         <activity android:name="com.lcworld.module_order.activity.OrderDetailAct"/>
+
+        <activity
+                android:name="com.lcworld.businesschain.WXPayEntryActivity"
+                android:exported="true"
+                android:launchMode="singleTop"/>
     </application>
 </manifest>
