接口调试： 订单列表接口 订单详情接口

--- a/module_account/src/main/alone/AndroidManifest.xml
+++ b/module_account/src/main/alone/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.lcworld.module_account.activity.LoginActivity"/>
+        <activity android:name="com.lcworld.module_account.activity.LoginActivity"
+        android:launchMode="singleTop"/>
         <activity android:name="com.lcworld.module_account.activity.RegistFirstActivity"/>
         <activity android:name="com.lcworld.module_account.activity.SetPasswordActivity"/>
         <activity android:name="com.lcworld.module_account.activity.RetrieveFirstActivity"/>
