--- a/module_system/build.gradle
+++ b/module_system/build.gradle
@@ -1,4 +1,7 @@
 apply from: "../module.build.gradle"
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 android {
     defaultConfig {
         //如果是独立模块，则使用当前组件的包名
@@ -14,7 +17,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //组件依赖基础库
     api project(':library_base')
-    //组件中依赖阿里路由编译框架
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
+    implementation 'com.alibaba:arouter-api:1.4.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
