--- a/module_system/src/main/alone/AndroidManifest.xml
+++ b/module_system/src/main/alone/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lcworld.module_system.activity.ToolEntranceActiviy">
+        <activity android:name="com.lcworld.module_system.activity.ToolEntranceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
