1.完善UI 2.部分接口调试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,10 @@ dependencies {
 //        implementation project(':module_other')
         //分享模块
         implementation project(':module_share')
+        //后台模块
+        implementation project(':module_backstage')
+        //设置模块
+        implementation project(':module_system')
     }
 
 }
