--- a/module_exchange/build.gradle
+++ b/module_exchange/build.gradle
@@ -15,14 +15,18 @@ android {
 androidExtensions {
     experimental = true
 }
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //组件依赖基础库
-    api project(':library_base')
+    api project(':library_base_kotlin')
     //组件中依赖阿里路由编译框架
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt 'com.alibaba:arouter-compiler:1.2.2'
-    implementation 'com.alibaba:arouter-api:1.4.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
     implementation 'com.contrarywind:Android-PickerView:4.1.7'
