--- a/library_base/src/main/AndroidManifest.xml
+++ b/library_base/src/main/AndroidManifest.xml
@@ -20,5 +20,14 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/file_paths" />
         </provider>
+        <provider
+                android:name="com.lcworld.library_base.provider.AppFileProvider"
+                android:authorities="${applicationId}.provider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 </manifest>
