--- a/module_backstage/src/main/alone/AndroidManifest.xml
+++ b/module_backstage/src/main/alone/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/back_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppMainTheme"
         tools:replace="label">
 
     </application>
