--- a/module_home/src/main/alone/AndroidManifest.xml
+++ b/module_home/src/main/alone/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:label="@string/home_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppMainTheme"
         tools:replace="label">
         <activity
-            android:name="com.lcworld.module_home.debug.DebugActivity"
-            android:theme="@style/MainTheme.TranslucentTheme">
+            android:name="com.lcworld.module_home.debug.DebugActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
