--- a/module_main/src/main/alone/AndroidManifest.xml
+++ b/module_main/src/main/alone/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/main_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppMainTheme"
         tools:replace="label">
         <activity
             android:name=".activity.SplashActivity"
@@ -24,7 +24,6 @@
         <activity
             android:name=".activity.GuideActivity"
             android:theme="@style/MainTheme.FullScreen" />
-        <activity android:name=".activity.MainActivity"
-            android:theme="@style/MainTheme.TranslucentTheme"/>
+        <activity android:name=".activity.MainActivity"/>
     </application>
 </manifest>
