--- a/module_order/src/main/alone/AndroidManifest.xml
+++ b/module_order/src/main/alone/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/order_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppMainTheme"
         tools:replace="label">
         <activity android:name="com.lcworld.module_order.ui.EntranceActivity">
             <intent-filter>
