--- a/module_share/src/main/alone/AndroidManifest.xml
+++ b/module_share/src/main/alone/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/share_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppMainTheme">
         <activity android:name="com.lcworld.module_share.debug.DebugActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
