--- a/module_order/src/main/AndroidManifest.xml
+++ b/module_order/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name="com.lcworld.module_order.activity.PaymentDiamondAct" />
         <activity android:name="com.lcworld.module_order.activity.OrderReviewAct"/>
         <activity android:name="com.lcworld.module_order.activity.OrderDetailAct"/>
+        <activity android:name="com.lcworld.module_order.activity.BrowseTextActivity"/>
 
 
     </application>
