--- a/module_order/src/main/alone/AndroidManifest.xml
+++ b/module_order/src/main/alone/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name="com.lcworld.module_order.activity.PaymentDiamondAct"/>
         <activity android:name="com.lcworld.module_order.activity.OrderReviewAct"/>
         <activity android:name="com.lcworld.module_order.activity.OrderDetailAct"/>
+        <activity android:name="com.lcworld.module_order.activity.BrowseTextActivity"/>
 
         <activity
                 android:name="com.lcworld.businesschain.WXPayEntryActivity"
