--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     api 'com.lcodecorex:tkrefreshlayout:1.0.7'
     //picture_selector
     api rootProject.ext.dependencies["picture_selector"]
+    //flycodialog
+    api rootProject.ext.dependencies["flycodialog"]
 }
