--- a/module_share/MobSDK.gradle
+++ b/module_share/MobSDK.gradle
@@ -1,21 +1,8 @@
-apply from: "../module.build.gradle"
 apply plugin: 'com.mob.sdk'
 
-android {
-    defaultConfig {
-        //如果是独立模块，则使用当前组件的包名
-        if (isBuildModule.toBoolean()) {
-            applicationId "com.lcworld.module_share"
-        }
-    }
-    //统一资源前缀，规范资源引用
-    resourcePrefix "share_"
-}
-
 MobSDK {
-    appKey "d580ad56b4b5"
-    appSecret "7fcae59a62342e7e2759e9e397c82bdd"
-
+    appKey "替换为mob官方申请的appkey"
+    appSecret "替换为mob官方申请的appkey对应的appSecret"
     ShareSDK {
         devInfo {
             SinaWeibo {
@@ -45,14 +32,4 @@ MobSDK {
             }
         }
     }
-
-}
-
-dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    //组件依赖基础库
-    api project(':library_base')
-    //组件中依赖阿里路由编译框架
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
-    //单组件依赖的第三方库，这里不能用implementation，否则宿主项目会因为databinding运行时不能找到第三方类报编译错误
 }
