--- a/module_account/src/main/AndroidManifest.xml
+++ b/module_account/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
-<manifest package="com.lcworld.module_account"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.lcworld.module_account">
+
     <application>
         <activity android:name="com.lcworld.module_account.activity.LoginActivity"/>
         <activity android:name="com.lcworld.module_account.activity.RegistFirstActivity"/>
         <activity android:name="com.lcworld.module_account.activity.SetPasswordActivity"/>
         <activity android:name="com.lcworld.module_account.activity.RetrieveFirstActivity"/>
         <activity android:name="com.lcworld.module_account.activity.BrowseTextActivity"/>
+        <activity android:name="com.lcworld.module_account.activity.PaymentPswModifyAct"/>
     </application>
 </manifest>
