--- a/module_main/src/main/alone/AndroidManifest.xml
+++ b/module_main/src/main/alone/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:replace="label">
         <activity
             android:name=".activity.SplashActivity"
-            android:theme="@style/MainAppTheme.Start">
+            android:theme="@style/MainModuleTheme.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
 
         <activity
             android:name=".activity.GuideActivity"
-            android:theme="@style/MainTheme.FullScreen" />
+            android:theme="@style/ModuleTheme.FullScreen" />
         <activity android:name=".activity.MainActivity"/>
     </application>
 </manifest>
