--- a/module_backstage/src/main/AndroidManifest.xml
+++ b/module_backstage/src/main/AndroidManifest.xml
@@ -5,5 +5,6 @@
         <activity android:name=".activity.FanSearchActivity"/>
         <activity android:name=".activity.FanListActivity"/>
         <activity android:name=".activity.FansDetailActivity"/>
+        <activity android:name=".activity.FansManagerActivity"/>
     </application>
 </manifest>
